# ai-coder

./: .envrc  .gitignore  .local-ci.toml  Cargo.toml  GITHUB_INTEGRATION.md  NIX.md  README.md  SETUP.md  SKILL.md  flake.nix
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: agent.rs  cli.rs  error.rs  lib.rs  main.rs  model.rs  ollama.rs  runtime.rs
src/github/: app_auth.rs  client.rs  errors.rs  mod.rs  models.rs
